Added concurrent processing of transaction risk assessment using StructuredConcurrency